# synth.io

./: .gitignore  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/audio/: AudioEngine.cpp  AudioEngine.h  Chorus.cpp  Chorus.h  Delay.cpp  Delay.h  DrumMachine.cpp  DrumMachine.h  DrumSynth.cpp  DrumSynth.h  Envelope.cpp  Envelope.h  Filter.cpp  Filter.h  LFO.cpp  LFO.h  Looper.cpp  Looper.h  Metronome.cpp  Metronome.h  Oscillator.cpp  Oscillator.h  PolyphonyManager.cpp  PolyphonyManager.h  Reverb.cpp  Reverb.h  Tremolo.cpp  Tremolo.h  Voice.cpp  Voice.h  WurlitzerEngine.cpp  WurlitzerEngine.h  WurlitzerVoice.cpp  WurlitzerVoice.h
app/src/main/java/com/synthio/app/: MainActivity.kt
app/src/main/java/com/synthio/app/audio/: AacEncoder.kt  AudioExportService.kt  ExportJob.kt  (+4 more)
app/src/main/res/drawable/: ic_launcher_foreground.xml  wurlitzer_banner.xml
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
web/: package-lock.json  package.json
web/public/: manifest.json
web/public/worklets/: synth-processor.js
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/audio/: engine.ts
web/src/components/controls/: ADSRPanel.tsx  ChordModePanel.tsx  CollapsibleSection.tsx  EffectsPanel.tsx  FilterPanel.tsx  Knob.tsx  LFOPanel.tsx  Slider.tsx
web/src/components/keyboard/: Keyboard.tsx
web/src/lib/: db.ts  music-constants.ts
web/src/stores/: synth-store.ts
(+22 files in other folders)
